--- a/code/ProjectScript.ipynb
+++ b/code/ProjectScript.ipynb
@@ -1649,6 +1649,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Conclusion: \n",
+    "Our Hypothesis “Cases are up due to more testing” is incorrect.  Though we observe an increase in confirmed cases volume when we perform more tests, the rate is not increased in the same proportionate. You may wonder why we see increase/decrease in confirmed cases? There are external factors which might impact increase/decrease in covid confirmed cases. For example, new variants, vaccination/herd immunity, mask policy, social distancing, work from home, travel restrictions and lock downs might influence covid virus exposure and spread.\n",
+    "Interpretation of data analysis results and summarizing it in simple text is needed so that all humans can understand. It is important to review data analysis and results, good if we have an expert review committee to ensure the method used for analysis is appropriate one and data is not manipulated (ex: take partial data) to get desired outcome. Also sharing the code and data can help others to reproduce or replicate the analysis as we gather new data points. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
